--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ go.work
 go.work.sum
 
 # env file
-.env
+*.env
 
 # air file
 .air.toml
@@ -35,3 +35,5 @@ tmp/
 # .idea/
 # .vscode/
 configs/*.json
+
+*.log
